Fix config bugs, add config template
- Added a config-template.yml file illustrating the config file
- Fixed some issues with dependency config UI
  - Bug where "Cancel" caused everything to be duplicated
  - Cancel button now also collapses config UI
  - Layout issues with resolvers solved by making it a grid

--- a/polynote-frontend/style/styles.less
+++ b/polynote-frontend/style/styles.less
@@ -1538,9 +1538,8 @@ button {
   }
 
   .resolver-row {
-    input {
-      width: 33em;
-    }
+    display: grid;
+    grid-template-columns: 7em 2fr 1fr 1fr 32px;
 
     select {
       width: 7em;
@@ -1553,7 +1552,7 @@ button {
 
   .resolver-row.ivy {
     input.ivy {
-      display: inline-block;
+      display: block;
     }
   }
 
